--- a/pelitaProject/kasir/templates/kasir/adminDashboard.html
+++ b/pelitaProject/kasir/templates/kasir/adminDashboard.html
@@ -16,7 +16,7 @@
   href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
   rel="stylesheet"
 />
-<link href="{% static 'kasir/css/style.css' %}" rel="stylesheet">
+<link href="{% static 'kasir/css/kasir.css' %}" rel="stylesheet">
 {% endblock style %}
 
 {% block content %}
