--- a/pelitaProject/kasir/templates/kasir/kasirAdmin.html
+++ b/pelitaProject/kasir/templates/kasir/kasirAdmin.html
@@ -60,7 +60,7 @@
           
       <div class="flex-1 flex flex-col">
           <header class="flex items-center justify-between border-b border-[#E6E6E6] bg-white px-6 h-12">
-      	      <button class="hamburger block md:hidden text-xl" onclick="toggleSidebar()">
+      	      <button class="hamburger block md:hidden text-xl" id="hamburger">
       	        <i class="fas fa-bars"></i>
       	      </button>
               <div class="text-sm font-normal text-[#1E1E1E]">Cashier</div>
