--- a/pelitaProject/kasir/templates/kasir/kasir.html
+++ b/pelitaProject/kasir/templates/kasir/kasir.html
@@ -93,7 +93,17 @@
                             <p>Total Items: <span id="total-items">0</span></p>
                             <p><strong>Total:</strong> <span class="text-primary" id="total-price">Rp 0</span></p>
                             <input type="text" class="form-control mb-3" placeholder="Masukkan nama pelanggan">
-    
+                            
+                            <div class="mb-2">
+                              <div class="form-check form-switch mb-2">
+                                <input class="form-check-input" type="checkbox" id="toggle-nominal">
+                                <label class="form-check-label" for="toggle-nominal">Input berdasarkan uang</label>
+                              </div>
+                          
+                              <input type="number" class="form-control mb-2" id="input-uang" placeholder="Masukkan nominal (Rp)" style="display:none;">
+                              <input type="number" class="form-control" id="input-qty" placeholder="Masukkan berat (kg)">
+                            </div>
+
                             <h6>Metode Pembayaran</h6>
                             <div class="form-check form-check-inline">
                                 <input class="form-check-input" type="radio" name="payment" id="cash" checked>
