--- a/pelitaProject/kasir/templates/kasir/kasir.html
+++ b/pelitaProject/kasir/templates/kasir/kasir.html
@@ -118,7 +118,7 @@
                                 <label class="form-check-label" for="credit">Kredit</label>
                             </div>
     
-                            <button class="btn btn-primary w-100">Proses Pembayaran</button>
+                            <button onclick="confirmAddToCart()" class="btn btn-primary w-100">Proses Pembayaran</button>
                         </div>
                     </div>
                 </div>
