--- a/pelitaProject/kasir/templates/kasir/kasirAdmin.html
+++ b/pelitaProject/kasir/templates/kasir/kasirAdmin.html
@@ -86,6 +86,15 @@
                   <div class="col-md-4">
                       <div class="card p-3">
                           <h5><i class="bi bi-cart"></i> Keranjang</h5>
+                          <div class="mb-2">
+                            <div class="form-check form-switch mb-2">
+                              <input class="form-check-input" type="checkbox" id="toggle-nominal">
+                              <label class="form-check-label" for="toggle-nominal">Input berdasarkan uang</label>
+                            </div>
+                        
+                            <input type="number" class="form-control mb-2" id="input-uang" placeholder="Masukkan nominal (Rp)" style="display:none;">
+                            <input type="number" class="form-control" id="input-qty" placeholder="Masukkan berat (kg)">
+                          </div>
                           <div class="table-responsive">
                               <table class="table" id="cart-table">
                                   <thead>
