--- a/pelitaProject/kasir/templates/kasir/laporan.html
+++ b/pelitaProject/kasir/templates/kasir/laporan.html
@@ -104,6 +104,11 @@
         >
           Terapkan
         </button>
+        <div class="mt-2">
+          <a href="{% url 'download_laporan_pdf' %}" class="btn btn-danger">
+            <i class="fa fa-file-pdf"></i> Download Laporan PDF
+          </a>
+        </div>
       </section>
 
       <!-- Summary -->
