--- a/pelitaProject/kasir/templates/kasir/laporan.html
+++ b/pelitaProject/kasir/templates/kasir/laporan.html
@@ -104,11 +104,11 @@
         >
           Terapkan
         </button>
-        <div class="mt-2">
-          <a class="btn btn-danger">
-            <i class="fa fa-file-pdf"></i> Download Laporan PDF
-          </a>
-        </div>
+	      <a 
+   	        id="downloadLowStockBtn"
+   	        class="btn btn-danger hidden text-xs bg-red-600 text-white px-3 py-2 rounded hover:bg-red-700 transition">
+ 	       <i class="bi bi-download"></i> Download Stok Menipis (PDF)
+	      </a>
       </section>
 
       <!-- Summary -->
