--- a/pelitaProject/kasir/templates/kasir/laporan.html
+++ b/pelitaProject/kasir/templates/kasir/laporan.html
@@ -106,7 +106,7 @@
         </button>
 	      <a 
    	        id="downloadLowStockBtn"
-   	        class="btn btn-danger hidden text-xs bg-red-600 text-white px-3 py-2 rounded hover:bg-red-700 transition">
+   	        class="btn btn-danger text-xs bg-red-600 text-white px-3 py-2 rounded hover:bg-red-700 transition">
  	       <i class="bi bi-download"></i> Download Stok Menipis (PDF)
 	      </a>
       </section>
