--- a/pelitaProject/kasir/templates/kasir/laporan.html
+++ b/pelitaProject/kasir/templates/kasir/laporan.html
@@ -107,7 +107,7 @@
 	      <a 
    	        id="downloadLowStockBtn"
    	        class="btn btn-danger text-xs bg-red-600 text-white px-3 py-2 rounded hover:bg-red-700 transition">
- 	       <i class="bi bi-download"></i> Download Stok Menipis (PDF)
+ 	       <i class="bi bi-download"></i> Download Laporan (PDF)
 	      </a>
       </section>
 
