--- a/pelitaProject/kasir/templates/kasir/laporan.html
+++ b/pelitaProject/kasir/templates/kasir/laporan.html
@@ -105,7 +105,7 @@
           Terapkan
         </button>
 	      <a 
-   	        id="downloadLowStockBtn"
+   	        id="downloadLaporan"
    	        class="btn btn-danger text-xs bg-red-600 text-white px-3 py-2 rounded hover:bg-red-700 transition">
  	       <i class="bi bi-download"></i> Download Laporan (PDF)
 	      </a>
