--- a/pelitaProject/kasir/templates/kasir/laporan.html
+++ b/pelitaProject/kasir/templates/kasir/laporan.html
@@ -104,7 +104,7 @@
         >
           Terapkan
         </button>
-	      <a 
+	      <a href="{% url 'download_laporan_pdf'%}"
    	        id="downloadLaporan"
    	        class="btn btn-danger text-xs bg-red-600 text-white px-3 py-2 rounded hover:bg-red-700 transition">
  	       <i class="bi bi-download"></i> Download Laporan (PDF)
